# webgoose

./: .gitignore  LICENSE  README.md  TODO  TODO.md  [new]README.md.backup  [old]pyproject.toml  draft-docs.md.backup  main.py  plan-doc.md  plan-doc.md.backup  pyproject.toml  requirements.txt  run.py  test.py  text.txt  variables.md  variables.md.backup  webgoose.py
config/: config.ini
docs/: README.md  draft-docs.md
docs/tmp/: [new]README.md
examples/config/: example_site.yaml
pages/: index.md
source/: index.md
source/pages/: another-page.md
src/: __init__.py  index.md  page_builder.py  primary_routes.py  request_handler.py
src/pages/: a.md
src/route/: primary.py  primary_routes.py
src/webgoose/: [old]macro_processor.py  __init__.py  config.py  file_traverser.py  macro_processor.py  macros.py  page.py  page_builder.py  webgoose_exception.py
static/: style.css
template/: base.html  custom.html  default.html
template/site-essential/: error-404.html  error-500.html  headers.html
test/: conftest.py  test_base_page_querier.py  test_config.yaml  test_external.py  test_file_utils.py  test_path_utils.py
test_files/: halal.html
webgoose/: [old]site_querier.py  __init__.py  __main__.py  base_page_querier.py  build.py  build_handler.py  component.py  config.py  file_traverser.py  macro_processor.py  macros.py  main.py  page_builder.py  page_grabber.py  page_querier.py  render.py  renderer.py  request_handler.py  routes.py  site.py  site_grabber.py  site_querier.py  site_reader.py  util.py  version.py  webgoose_exception.py
webgoose/struct/: page.py  (+4 more)
(+118 files in other folders)
