[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "webgoose"
description = "Static Site Generator"
requires-python = ">=3.7"
license = {text = "MIT"}
version = "0.3.4"
dynamic = ["dependencies", "readme"]


[project.scripts]
webgoose = "webgoose.__main__:main"


[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}
